[package]
name = "mouse"
authors = ["Jochen Maes <jochen@sejo-it.be>"]
description = "Information gatherer for systems."
version = "0.1.0"
edition = "2021"

[registries]
gitea = { index = "https://gitea.sejo-it.be/SeJo-IT/_cargo-index" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.189", features = ["std", "derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
