[package]
name = "mouse"
authors = ["Jochen Maes <jochen@sejo-it.be>"]
description = "Information gatherer for systems."
# this will be overwritten during builds! so ignore
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.190", features = ["std", "derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
